--- a/notebooks/dataset_explore.ipynb
+++ b/notebooks/dataset_explore.ipynb
@@ -427,6 +427,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "436b16d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['gender', 'SeniorCitizen', 'Partner', 'Dependents', 'tenure',\n",
+       "       'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity',\n",
+       "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
+       "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
+       "       'MonthlyCharges', 'TotalCharges', 'Churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faca97c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.columns:\n",
+    "    if df[col]."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "446dcb76",
    "metadata": {},
